force-app/main/default/objects/Discount_Setting__c/Discount_Setting__c.object-meta.xml
<CustomObject>
    <label>Discount Setting</label>
    <nameField>
        <label>Discount Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discount Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>