force-app/main/default/objects/Discount_Setting__c/fields/Max_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Max_Discount_Percent__c</fullName>
    <label>Max Discount Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>