force-app/main/default/objects/Discount_Setting__c/fields/Minimum_Price_Floor_Percent__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Price_Floor_Percent__c</fullName>
    <label>Minimum Price Floor Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>