force-app/main/default/objects/Discount_Setting__c/fields/Strategy__c.field-meta.xml
<CustomField>
    <fullName>Strategy__c</fullName>
    <label>Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lowest</fullName>
            </value>
            <value>
                <fullName>Highest</fullName>
            </value>
            <value>
                <fullName>Cumulative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>